feature: option for instant input

--- a/app/src/main/res/values-de-rDE/strings.xml
+++ b/app/src/main/res/values-de-rDE/strings.xml
@@ -11,10 +11,8 @@
     <string name="wristassist_change_api_key">API-Schlüssel ändern</string>
     <string name="wristassist_no_api_key">Kein API-Schlüssel festgelegt</string>
     <string name="wristassist_vibrate">Vibrieren</string>
-    <string name="wristassist_vibrate_message">Vibrieren, wenn eine Antwort erscheint</string>
     <string name="wristassist_font_size">Schriftgröße</string>
     <string name="wristassist_show_cost">Verbrauch anzeigen</string>
-    <string name="wristassist_show_cost_message">Verbrauch für jede Antwort anzeigen</string>
     <string name="wristassist_select_model">KI Model wechseln</string>
     <string name="wristassist_okay">OK</string>
     <string name="wristassist_cancel">Abbrechen</string>
@@ -47,7 +45,6 @@
     <string name="changelog_md_21">### Version 2.4.0  \n#### Markdown-Darstellung in Chats hinzugefügt  \nDie KI-Modelle zeigen manchmal Text in **fett**, *Kursivschrift* oder &lt;u&gt;unterstrichen&lt;/u&gt; an. Diese und andere Formatierungen werden nun korrekt angezeigt.  \n#### GPT-4 Turbo Modell hinzugefügt  \nGPT-4 Turbo ist leistungsfähiger und kennt das Weltgeschehen bis zum April 2023. Es ist 2 bis 3 Mal günstiger als GPT-4.  \n#### Ausführlichere Fehlermeldungen  \nFehler wie zu lange Chats, Kontingent Überschreitung und ungültige Modelle werden nun korrekt angezeigt.  \n#### mehrere Fehlerbehebungen  \n</string>
     <string name="wristassist_no_speech_recognition">Keine Tastatur mit Spracherkennung installiert</string>
     <string name="wristassist_hands_free">Freisprech Eingabe</string>
-    <string name="wristassist_hands_free_message">Spracherkennung für die Eingabe</string>
     <string name="wristassist_custom_host">Eigener Host</string>
     <string name="wristassist_custom_model">Eigenes Model</string>
     <string name="wristassist_custom_server">Eigener API Server</string>
@@ -66,4 +63,5 @@
     <string name="wristassist_reset">Zurücksetzen</string>
     <string name="wristassist_total_cost" formatted="false">Gesamtkosten: ~ %1$s $</string>
     <string name="wristassist_no_usage_yet">Kein Verbrauch bisher</string>
+    <string name="wristassist_instant_input">Direkte Eingabe</string>
 </resources>
