--- a/app/src/main/res/values-de-rDE/strings.xml
+++ b/app/src/main/res/values-de-rDE/strings.xml
@@ -13,13 +13,13 @@
     <string name="wristassist_vibrate">Vibrieren</string>
     <string name="wristassist_font_size">Schriftgröße</string>
     <string name="wristassist_show_cost">Verbrauch anzeigen</string>
-    <string name="wristassist_select_model">KI Model wechseln</string>
+    <string name="wristassist_select_model">Chat-KI Modell</string>
     <string name="wristassist_okay">OK</string>
     <string name="wristassist_cancel">Abbrechen</string>
     <string name="wristassist_click_to_reveal">Klicke zum Anzeigen</string>
     <string name="wristassist_welcome">Willkommen bei\nWristAssist</string>
     <string name="wristassist_welcome_info">Bitte scanne den QR-Code, um Anweisungen zur Einrichtung und Nutzung von WristAssist zu erhalten.</string>
-    <string name="wristassist_gpt_settings">KI Einstellungen</string>
+    <string name="wristassist_api_settings">API Einstellungen</string>
     <string name="wristassist_chat_settings">Chat Einstellungen</string>
     <string name="wristassist_tts_settings">TTS Einstellungen</string>
     <string name="wristassist_tts">TTS</string>
@@ -29,10 +29,10 @@
     <string name="wristassist_chat_reset">Chat zurückgesetzt</string>
     <string name="wristassist_chat_deleted">Chat gelöscht</string>
     <string name="wristassist_edit_chat_title">Chat Titel ändern</string>
-    <string name="wristassist_enter_prompt">Gib eine Anweisung ein</string>
-    <string name="wristassist_prompt">Anweisung</string>
-    <string name="wristassist_enter_system_prompt">Gib eine System-Anweisung an</string>
-    <string name="wristassist_system_prompt">System-Anweisung</string>
+    <string name="wristassist_enter_prompt">Anweisung:</string>
+    <string name="wristassist_prompt">Schreibe einen Artikel …</string>
+    <string name="wristassist_enter_system_prompt">System-Anweisung:</string>
+    <string name="wristassist_system_prompt">Sprich wie Yoda</string>
     <string name="wristassist_set_api_key">API Schlüssel festlegen</string>
     <string name="wristassist_api_key">API Schlüssel</string>
     <string name="wristassist_set_chat_title">Chat Titel festlegen</string>
@@ -46,7 +46,7 @@
     <string name="wristassist_no_speech_recognition">Keine Tastatur mit Spracherkennung installiert</string>
     <string name="wristassist_hands_free">Freisprech Eingabe</string>
     <string name="wristassist_custom_host">Eigener Host</string>
-    <string name="wristassist_custom_model">Eigenes Model</string>
+    <string name="wristassist_custom_model">Eigenes Modell</string>
     <string name="wristassist_custom_server">Eigener API Server</string>
     <string name="wristassist_invalid_host">Ungültiges URL-Format</string>
     <string name="wristassist_ai">KI</string>
@@ -65,4 +65,26 @@
     <string name="wristassist_no_usage_yet">Kein Verbrauch bisher</string>
     <string name="wristassist_instant_input">Direkte Eingabe</string>
     <string name="changelog_md_25">### Version 2.7.0  \n#### Aktivität zum Überprüfen des Verbrauchs  \nAktivität hinzugefügt, um die Nutzung der einzelnen Modelle zu überprüfen.  \n#### Direkte Eingabe  \nEinstellung zum sofortigen Starten eines neuen Chats hinzugefügt.  \n#### Mehrere Fehlerbehebungen  \n</string>
+    <string name="wristassist_menu_images">Bilder</string>
+    <string name="wristassist_describe_image">Beschreibe das Bild</string>
+    <string name="wristassist_image_hint">Ein süßer Hund mit einem Hut</string>
+    <string name="wristassist_last_modified">Zuletzt bearbeitet:</string>
+    <string name="wristassist_chat_cost">Token Verbrauch:</string>
+    <string name="wristassist_images_settings">Bilder Einstellungen</string>
+    <string name="wristassist_select_image_model">Bilder-KI Modell</string>
+    <string name="wristassist_select_image_quality">Bild Qualität</string>
+    <string name="wristassist_select_image_size">Bild Größe</string>
+    <string name="wristassist_select_image_style">Bild Stil</string>
+    <string name="wristassist_image_quality_vivid">Lebendig</string>
+    <string name="wristassist_image_quality_natural">Natürlich</string>
+    <string name="wristassist_open_image_prompt">Beschreibung:</string>
+    <string name="wristassist_open_image_revised_prompt">Überarbeitete Beschreibung:</string>
+    <string name="wristassist_open_image_model">Modell:</string>
+    <string name="wristassist_open_image_quality">Qualität:</string>
+    <string name="wristassist_open_image_size">Größe:</string>
+    <string name="wristassist_open_image_style">Stil:</string>
+    <string name="wristassist_open_image_created">Erstellt:</string>
+    <string name="wristassist_images_count" formatted="false">Anzahl an Bildern: %1$s</string>
+    <string name="wristassist_image_expires_in" formatted="false">Geteilter Link läuft in %1$d Minuten ab</string>
+    <string name="wristassist_image_request_rejected">Die Anfrage wurde abgelehnt. Deine Anfrage enthält möglicherweise Text, der nicht erlaubt ist.</string>
 </resources>
