--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -56,7 +56,7 @@
     <string name="wristassist_custom_host">Custom host</string>
     <string name="wristassist_custom_host_hint" translatable="false">https://api.example.com/</string>
     <string name="wristassist_custom_model">Custom model</string>
-    <string name="wristassist_custom_model_hint" translatable="false">gpt-3.5-turbo</string>
+    <string name="wristassist_custom_model_hint" translatable="false">gpt-4o-mini</string>
     <string name="wristassist_custom_server">Custom API server</string>
     <string name="wristassist_invalid_host">Invalid URL format</string>
     <string name="wristassist_ai">AI</string>
