--- a/app/src/main/res/values-de-rDE/strings.xml
+++ b/app/src/main/res/values-de-rDE/strings.xml
@@ -18,7 +18,7 @@
     <string name="wristassist_cancel">Abbrechen</string>
     <string name="wristassist_click_to_reveal">Klicke zum Anzeigen</string>
     <string name="wristassist_welcome">Willkommen bei\nWristAssist</string>
-    <string name="wristassist_welcome_info">Bitte scanne den QR-Code, um Anweisungen zur Einrichtung und Nutzung von WristAssist zu erhalten.</string>
+    <string name="wristassist_welcome_info">Bitte scanne den QR-Code, um Anweisungen zur Einrichtung und Nutzung zu erhalten.</string>
     <string name="wristassist_api_settings">API Einstellungen</string>
     <string name="wristassist_chat_settings">Chat Einstellungen</string>
     <string name="wristassist_tts_settings">TTS Einstellungen</string>
